--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "laravel/sanctum": "^2.0|^3.0"
+        "laravel/sanctum": "^2.0|^3.0",
+        "illuminate/cache": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.7",
