--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^8.0",
         "laravel/sanctum": "^2.0|^3.0|^4.0",
-        "illuminate/cache": "^8.0|^9.0|^10.0|^11.0"
+        "illuminate/cache": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.7",
